Closed Bug 1724263 Opened 3 years ago Closed 3 years ago

Crash in [@ InvalidArrayIndex_CRASH | mozilla::widget::ScreenGetterWayland::GetScreenForWindow]

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- fixed

People

(Reporter: sefeng, Assigned: sefeng)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/989d60a1-e6ee-4973-8929-639620210802

MOZ_CRASH Reason: ElementAt(aIndex = 0, aLength = 0)

Top 10 frames of crashing thread:

0 libxul.so InvalidArrayIndex_CRASH xpcom/ds/nsTArray.cpp:28
1 libxul.so mozilla::widget::ScreenGetterWayland::GetScreenForWindow widget/gtk/ScreenHelperGTK.cpp:399
2 libxul.so mozilla::widget::ScreenHelperGTK::GetScreenForWindow widget/gtk/ScreenHelperGTK.cpp:415
3 libxul.so nsWindow::GetWidgetScreen widget/gtk/nsWindow.cpp:6887
4 libxul.so nsWindow::GetDPI widget/gtk/nsWindow.cpp:805
5 libxul.so nsDeviceContext::SetDPI gfx/src/nsDeviceContext.cpp:319
6 libxul.so nsDeviceContext::CheckDPIChange gfx/src/nsDeviceContext.cpp:667
7 libxul.so nsDocumentViewer::SetBoundsWithFlags layout/base/nsDocumentViewer.cpp:1987
8 libxul.so nsDocShell::SetPositionAndSize docshell/base/nsDocShell.cpp:4547
9 libxul.so mozilla::AppWindow::WindowResized xpfe/appshell/AppWindow.cpp:2784
Severity: -- → S2
Assignee: nobody → sefeng
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/a1a26ba25fbc
Fix an invalid index crash in ScreenGetterWayland::GetScreenForWindow r=stransky
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: