Bug 1724263 - Fix an invalid index crash in ScreenGetterWayland::GetScreenForWindow r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D121900